examples/experimental/http-response-header.yaml
# Copyright IBM Corp. 2019, 2022
# SPDX-License-Identifier: Apache-2.0

apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: response-header-modifier
spec:
  parentRefs:
  - name: acme-gw
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /add-multiple-response-headers
    filters:
    - type: ResponseHeaderModifier
      responseHeaderModifier:
        add:
        - name: X-Header-Add-1
          value: header-add-1
        - name: X-Header-Add-2
          value: header-add-2
        - name: X-Header-Add-3
          value: header-add-3
        - name: Content-Disposition
          value: "attachment; filename=\"example_file.txt\""
    backendRefs:
    - name: echo
      port: 8080
