examples/experimental/http-route-rule-name.yaml
# Copyright IBM Corp. 2019, 2022
# SPDX-License-Identifier: Apache-2.0

#$ Used in:
#$ - reference/api-types/httproute.md
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: example-route
spec:
  parentRefs:
  - name: example-gateway
  rules:
  - name: read-only
    matches:
    - method: GET
    backendRefs:
    - name: backend-mirror-svc
      port: 8080
  - name: write-only
    matches:
    - method: POST
    - method: PATCH
    - method: DELETE
    backendRefs:
    - name: backend-svc
      port: 8080
